--- a/des.html
+++ b/des.html
@@ -138,5 +138,48 @@
       <div style="width: 65px;"></div>
     </div>
   </header>
+
+  <div class="main">
+    <div class="sidebar">
+      <div class="card">
+        <h2 id="total-clientes">0</h2>
+        <p>Total Clientes</p>
+      </div>
+      <div class="card">
+        <h2 id="total-concluidos">0</h2>
+        <p>Concluídos</p>
+      </div>
+      <div class="card">
+        <h2 id="valor-total">R$ 0,00</h2>
+        <p>Valor Total (R$)</p>
+      </div>
+      <div class="card">
+        <h2 id="cancelados">0</h2>
+        <p>Cancelados</p>
+      </div>
+    </div>
+    <div class="content">
+      <table>
+        <thead>
+          <tr>
+            <th>Cliente</th>
+            <th>Fazenda</th>
+            <th>Consultor</th>
+            <th>Data da Visita</th>
+            <th>Modelo</th>
+            <th>Município</th>
+            <th>Horímetro</th>
+            <th>Telefone</th>
+            <th>Observações</th>
+            <th>Checklist</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody id="painel-detalhes">
+          <!-- Dados dinâmicos inseridos por JavaScript -->
+        </tbody>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
