--- a/des.html
+++ b/des.html
@@ -125,6 +125,21 @@
       font-weight: 300;
       font-size: 100%;
     }
+      .btn-acao {
+      background-color: #00bbf9;
+      border: none;
+      color: white;
+      font-size: 18px;
+      border-radius: 8px;
+      padding: 6px 12px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn-acao:hover {
+      background-color: #009ac9;
+    }
+
   </style>
 </head>
 <body>
@@ -230,7 +245,7 @@
             <td>${d.observacoes || "-"}</td>
             <td>${(d.checklist || []).map(item => `<span style="background:#00bbf9; color:#fff; padding:3px 8px; border-radius:5px; margin:2px; display:inline-block; font-size:12px">${item}</span>`).join("")}</td>
             <td class="acoes">
-              <button>➕ Ações</button>
+              <button class="btn-acao">+</button>
             </td>
           </tr>`;
       });
