--- a/des.html
+++ b/des.html
@@ -245,7 +245,7 @@
             <td>${d.observacoes || "-"}</td>
             <td>${(d.checklist || []).map(item => `<span style="background:#00bbf9; color:#fff; padding:3px 8px; border-radius:5px; margin:2px; display:inline-block; font-size:12px">${item}</span>`).join("")}</td>
             <td class="acoes">
-              <button class="btn-acao">+</button>
+              <button class="btn-acao" onclick="abrirPopup('${d.id}')">+</button>
             </td>
           </tr>`;
       });
