--- a/des.html
+++ b/des.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <title>Dashboard com Firebase</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; }
 
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
+      font-family: Arial, sans-serif;
       background-color: #1e1e2f;
       color: white;
       display: flex;
@@ -30,11 +29,10 @@
     }
 
     #dynamic-title {
-      margin-top: 6px;
-      font-size: 14px;
-      font-weight: 300;
-      font-style: italic;
-      color: #aaa;
+      margin-top: 10px;
+      font-size: 16px;
+      font-weight: normal;
+      color: #ccc;
     }
 
     .main {
@@ -57,15 +55,31 @@
       background-color: #1e1e2f;
       padding: 20px;
       border-radius: 12px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.3);
-      text-align: center;
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
+      transition: transform 0.2s;
     }
 
-    .card p {
-      margin-top: 5px;
-      font-size: 14px;
-      color: #aaa;
+    .card:hover {
+      transform: translateY(-4px);
     }
+
+    .bar {
+      height: 8px;
+      background-color: #444;
+      border-radius: 4px;
+      margin-top: 10px;
+    }
+
+    .bar span {
+      display: block;
+      height: 100%;
+      border-radius: 4px;
+    }
+
+    .pink { background-color: #ff5ec3; }
+    .orange { background-color: #faae42; }
+    .blue { background-color: #00bbf9; }
+    .purple { background-color: #c77dff; }
 
     .content {
       flex: 1;
@@ -83,7 +97,7 @@
     }
 
     th, td {
-      font-size: 13px;
+      font-size: 12px;
       padding: 10px 15px;
       text-align: left;
       border-bottom: 1px solid #444;
@@ -91,8 +105,7 @@
 
     th {
       background-color: #2c2f3f;
-      color: #f1c40f;
-      font-weight: 500;
+      color: #cca700;
     }
 
     .acoes button {
@@ -119,39 +132,66 @@
       .content { padding: 15px; }
     }
 
-    .frase-italico {
-      font-family: 'Poppins', sans-serif;
-      font-style: italic;
-      font-weight: 300;
-      font-size: 100%;
+    /* POPUP STYLES */
+    #popup {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
     }
-      .btn-acao {
-      background-color: #00bbf9;
-      border: none;
+
+    #popup > div {
+      background: #2c2f3f;
+      padding: 20px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 400px;
       color: white;
-      font-size: 18px;
+    }
+
+    #popup textarea,
+    #popup input,
+    #popup select {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border: none;
+      border-radius: 6px;
+    }
+
+    #popup button {
+      padding: 8px 16px;
       border-radius: 8px;
-      padding: 6px 12px;
+      border: none;
       cursor: pointer;
-      transition: background 0.3s;
     }
 
-    .btn-acao:hover {
-      background-color: #009ac9;
+    #popup button:first-of-type {
+      background: #00bbf9;
+      color: white;
     }
 
+    #popup button:last-of-type {
+      background: #444;
+      color: white;
+      margin-left: 10px;
+    }
   </style>
 </head>
 <body>
   <header>
     <div style="display: flex; align-items: center; justify-content: space-between;">
-      <img src="assets/logo.png" alt="Logo" style="height: 80px; margin-right: 15px; margin-left: 40px;">
-      <div class="frase-italico" style="flex: 1; text-align: center;">
-        Agro Divel 360
-        <div id="dynamic-title">Carregando...</div>
+        <img src="assets/logo.png" alt="Logo" style="height: 150px; margin-right: 15px; margin-left: 20px;">
+        <div style="flex: 1; text-align: center;">
+          Sistema de Checklists - Agro Divel
+          <div id="dynamic-title" style="font-size: 14px; font-weight: normal; color: #ccc;">Carregando...</div>
+        </div>
+        <div style="width: 65px;"><!-- espaço para equilibrar a margem direita --></div>
       </div>
-      <div style="width: 65px;"></div>
-    </div>
   </header>
 
   <div class="main">
@@ -159,20 +199,25 @@
       <div class="card">
         <h2 id="total-clientes">0</h2>
         <p>Total Clientes</p>
+        <div class="bar"><span class="pink" style="width: 100%;"></span></div>
       </div>
       <div class="card">
         <h2 id="total-concluidos">0</h2>
         <p>Concluídos</p>
+        <div class="bar"><span class="orange" id="bar-concluidos"></span></div>
       </div>
       <div class="card">
-        <h2 id="valor-total">R$ 0,00</h2>
+        <h2 id="valor-total">0</h2>
         <p>Valor Total (R$)</p>
+        <div class="bar"><span class="blue" style="width: 100%;"></span></div>
       </div>
       <div class="card">
         <h2 id="cancelados">0</h2>
         <p>Cancelados</p>
+        <div class="bar"><span class="purple" id="bar-cancelados"></span></div>
       </div>
     </div>
+
     <div class="content">
       <table>
         <thead>
@@ -195,9 +240,33 @@
     </div>
   </div>
 
+  <!-- POPUP -->
+  <div id="popup">
+    <div>
+      <h3>Atualizar Checklist</h3>
+      <input type="hidden" id="docIdSelecionado">
+
+      <label>Comentário do Responsável</label>
+      <textarea id="comentario"></textarea>
+
+      <label>Status</label>
+      <select id="statusChecklist">
+        <option value="Em andamento">Em andamento</option>
+        <option value="Concluído">Concluído</option>
+        <option value="Cancelado">Cancelado</option>
+      </select>
+
+      <label>Valor Negociado (R$)</label>
+      <input type="number" id="valorNegociado">
+
+      <button onclick="salvarPopup()">Salvar</button>
+      <button onclick="fecharPopup()">Cancelar</button>
+    </div>
+  </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, collection, getDocs, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const tipoChecklist = new URLSearchParams(window.location.search).get("tipo") || "checklistComercial";
 
@@ -219,18 +288,35 @@
       const painel = document.getElementById("painel-detalhes");
       let total = 0, concluidos = 0, cancelados = 0, valorTotal = 0;
 
-      painel.innerHTML = "";
+      const documentos = [];
 
-      querySnapshot.forEach((doc) => {
-        const d = doc.data();
+      querySnapshot.forEach((docItem) => {
+        const d = docItem.data();
+        documentos.push({ id: docItem.id, ...d });
+
         total++;
         if (d.statusChecklist === "Concluído") concluidos++;
         if (d.statusChecklist === "Cancelado") cancelados++;
         if (!isNaN(d.valorNegociado)) valorTotal += Number(d.valorNegociado);
+      });
 
+      // 🧠 Ordenar por status
+      documentos.sort((a, b) => {
+        const prioridade = (status) => {
+          if (!status || status === "Em andamento") return 0;
+          if (status === "Concluído") return 1;
+          if (status === "Cancelado") return 2;
+          return 3;
+        };
+        return prioridade(a.statusChecklist) - prioridade(b.statusChecklist);
+      });
+
+      painel.innerHTML = "";
+
+      documentos.forEach((d) => {
         const statusClass = d.statusChecklist === "Concluído" ? "status-concluido" :
                             d.statusChecklist === "Cancelado" ? "status-cancelado" :
-                            "status-em-andamento";
+                            d.statusChecklist === "Em andamento" ? "status-em-andamento" : "";
 
         painel.innerHTML += `
           <tr class="${statusClass}">
@@ -245,7 +331,7 @@
             <td>${d.observacoes || "-"}</td>
             <td>${(d.checklist || []).map(item => `<span style="background:#00bbf9; color:#fff; padding:3px 8px; border-radius:5px; margin:2px; display:inline-block; font-size:12px">${item}</span>`).join("")}</td>
             <td class="acoes">
-              <button class="btn-acao" onclick="abrirPopup('${d.id}')">+</button>
+              <button onclick="abrirPopup('${d.id}')">➕ Ações</button>
             </td>
           </tr>`;
       });
@@ -254,52 +340,18 @@
       document.getElementById("total-concluidos").textContent = concluidos;
       document.getElementById("cancelados").textContent = cancelados;
       document.getElementById("valor-total").textContent = `R$ ${valorTotal.toLocaleString('pt-BR', { minimumFractionDigits: 2 })}`;
+
+      document.getElementById("bar-concluidos").style.width = total ? (concluidos / total) * 100 + "%" : "0%";
+      document.getElementById("bar-cancelados").style.width = total ? (cancelados / total) * 100 + "%" : "0%";
     }
 
     window.addEventListener("DOMContentLoaded", carregarDados);
-      window.abrirPopup = async function(id) {
-      const popup = document.createElement("div");
-      popup.id = "popup";
-      popup.style.position = "fixed";
-      popup.style.top = 0;
-      popup.style.left = 0;
-      popup.style.width = "100%";
-      popup.style.height = "100%";
-      popup.style.background = "rgba(0,0,0,0.6)";
-      popup.style.display = "flex";
-      popup.style.justifyContent = "center";
-      popup.style.alignItems = "center";
-      popup.style.zIndex = "1000";
 
-      const box = document.createElement("div");
-      box.style.background = "#2c2f3f";
-      box.style.padding = "20px";
-      box.style.borderRadius = "12px";
-      box.style.color = "white";
-      box.style.width = "90%";
-      box.style.maxWidth = "400px";
+    // Funções do Popup
+    window.abrirPopup = async function(id) {
+      document.getElementById("popup").style.display = "flex";
+      document.getElementById("docIdSelecionado").value = id;
 
-      box.innerHTML = `
-        <h3>Atualizar Checklist</h3>
-        <input type="hidden" id="docIdSelecionado" value="${id}">
-        <label>Comentário do Responsável</label>
-        <textarea id="comentario" style="width:100%;margin-bottom:10px;border:none;border-radius:6px;padding:8px;"></textarea>
-        <label>Status</label>
-        <select id="statusChecklist" style="width:100%;margin-bottom:10px;border:none;border-radius:6px;padding:8px;">
-          <option value="Em andamento">Em andamento</option>
-          <option value="Concluído">Concluído</option>
-          <option value="Cancelado">Cancelado</option>
-        </select>
-        <label>Valor Negociado (R$)</label>
-        <input type="number" id="valorNegociado" style="width:100%;margin-bottom:10px;border:none;border-radius:6px;padding:8px;">
-        <button id="salvarBtn" style="background:#00bbf9;color:white;padding:8px 16px;border-radius:8px;border:none;cursor:pointer;">Salvar</button>
-        <button id="fecharBtn" style="background:#444;color:white;padding:8px 16px;border-radius:8px;border:none;margin-left:10px;cursor:pointer;">Cancelar</button>
-      `;
-
-      popup.appendChild(box);
-      document.body.appendChild(popup);
-
-      const { doc, getDoc, updateDoc } = await import("https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js");
       const docRef = doc(db, tipoChecklist, id);
       const docSnap = await getDoc(docRef);
 
@@ -309,26 +361,28 @@
         document.getElementById("statusChecklist").value = dados.statusChecklist || "Em andamento";
         document.getElementById("valorNegociado").value = dados.valorNegociado || "";
       }
+    }
 
-      popup.querySelector("#salvarBtn").onclick = async () => {
-        const comentario = document.getElementById("comentario").value;
-        const status = document.getElementById("statusChecklist").value;
-        const valor = parseFloat(document.getElementById("valorNegociado").value) || 0;
+    window.fecharPopup = function() {
+      document.getElementById("popup").style.display = "none";
+    }
 
-        await updateDoc(docRef, {
-          comentarioResponsavel: comentario,
-          statusChecklist: status,
-          valorNegociado: valor
-        });
+    window.salvarPopup = async function() {
+      const id = document.getElementById("docIdSelecionado").value;
+      const comentario = document.getElementById("comentario").value;
+      const status = document.getElementById("statusChecklist").value;
+      const valor = parseFloat(document.getElementById("valorNegociado").value) || 0;
 
-        document.body.removeChild(popup);
-        carregarDados();
-      };
+      const docRef = doc(db, tipoChecklist, id);
+      await updateDoc(docRef, {
+        comentarioResponsavel: comentario,
+        statusChecklist: status,
+        valorNegociado: valor
+      });
 
-      document.getElementById("fecharBtn").onclick = () => {
-        document.body.removeChild(popup);
-      };
-    };
-</script>
+      fecharPopup();
+      carregarDados();
+    }
+  </script>
 </body>
 </html>
